tests/baselines/reference/tsxUnionTypeComponent2(strict=true).errors.txt
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'NewableFunction'.
file.tsx(7,2): error TS2604: JSX element type 'X' does not have any construct or call signatures.


!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
==== file.tsx (1 errors) ====
    import React = require('react');
    
    type Invalid1 = React.ComponentClass<any> | number;
    
    const X: Invalid1 = 1;
    
    <X />;
     ~
!!! error TS2604: JSX element type 'X' does not have any construct or call signatures.
    
    
    